# btf-rs

./: .cirrus.yml  .mailmap  Cargo.toml  README.md
.github/workflows/: ci.yaml
btf-rs/: Cargo.toml  README.md
btf-rs-derive/: Cargo.toml  README.md
btf-rs-derive/src/: lib.rs
btf-rs/examples/: benchmark.rs
btf-rs/src/: btf.rs  cbtf.rs  error.rs  lib.rs  obj.rs  section.rs
btf-rs/src/utils/: collection.rs  elf.rs  mod.rs
btf-rs/tests/: gen_assets.sh  integration_test.rs
btf-rs/tests/assets/: ids.rs
btf-rs/tests/assets/btf/: openvswitch  vmlinux
btf-rs/tests/assets/btf/no_layout/: vmlinux
btf-rs/tests/assets/elf/bzip2+xz/: vmlinux
btf-rs/tests/assets/elf/bzip2+xz/kernel/drivers/net/: veth.ko.xz
btf-rs/tests/assets/elf/bzip2+xz/kernel/net/openvswitch/: openvswitch.ko.xz  vport-geneve.ko.xz
btf-rs/tests/assets/elf/gzip+gzip/: vmlinux
btf-rs/tests/assets/elf/uncompressed/kernel/drivers/net/: veth.ko
btf-rs/tests/assets/elf/uncompressed/kernel/net/openvswitch/: openvswitch.ko  vport-geneve.ko
btf-rs/tests/assets/elf/xz+xz/: vmlinux
btf-rs/tests/assets/elf/xz+xz/kernel/net/openvswitch/: openvswitch.ko.xz  vport-geneve.ko.xz
btf-rs/tests/assets/elf/zstd+zstd/: vmlinux
btf-rs/tests/assets/elf/zstd+zstd/kernel/drivers/net/: veth.ko.zst
btf-rs/tests/assets/elf/zstd+zstd/kernel/net/openvswitch/: openvswitch.ko.zst  vport-geneve.ko.zst
examples/: benchmark.rs
src/: btf.rs  cbtf.rs  lib.rs  obj.rs
src/utils/: collection.rs  elf.rs  mod.rs
tests/: gen_assets.sh  integration_test.rs
tests/assets/btf/: vmlinux
tests/assets/elf/uncompressed/kernel/net/openvswitch/: openvswitch.ko
tests/assets/elf/xz+xz/: vmlinux
tests/assets/elf/zstd+zstd/kernel/drivers/net/: veth.ko.zst
tests/data/: openvswitch
tests/data/btf/: openvswitch
tests/data/linux_build/drivers/net/: veth.ko
tests/data/linux_build/net/mpls/: mpls_gso.ko
tests/data/linux_build/net/openvswitch/: vport-geneve.ko  vport-gre.ko  vport-vxlan.ko
