[package]
name = "btf-rs"
version = "1.1.0"
license = "LGPL-2.1-or-later"
description = "Library for the BPF type format (BTF)."
repository = "https://github.com/retis-org/btf-rs"
homepage = "https://github.com/retis-org/btf-rs"
readme = "README.md"
keywords = ["bpf", "btf", "ebpf"]
# Do not publish the tests and their data to save some space. Cargo files and
# readme are always included.
include = ["src/", "LICENSE"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
byteorder = "1.5"
bzip2 = { version = "0.6", optional = true }
elf = { version = "0.7", optional = true }
flate2 = { version = "1.1", optional = true }
liblzma = { version = "0.4", optional = true }
regex = { version = "1.10", optional = true }
thiserror = "2.0"
zstd = { version = "0.13", optional = true }

[dev-dependencies]
test-case = "3.2"

[features]
elf = ["dep:elf"]
elf-compression = ["elf", "dep:bzip2", "dep:flate2", "dep:liblzma", "dep:zstd"]
regex = ["dep:regex"]
