[package]
name = "btf-rs"
version = "1.0.0"
license = "LGPL-2.0-or-later"
description = "Library for the BPF type format (BTF)."
repository = "https://github.com/retis-org/btf-rs"
homepage = "https://github.com/retis-org/btf-rs"
readme = "README.md"
keywords = ["bpf", "btf", "ebpf"]
# Do not publish the tests and their data to save some space. Cargo files and
# readme are always included.
include = ["src/", "LICENSE"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
bzip2 = { version = "0.4", optional = true }
elf = { version = "0.7", optional = true }
flate2 = { version = "1.0", optional = true }
regex = { version = "1.10", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
test-case = "3.2"

[features]
elf = ["dep:elf"]
elf-compressed = ["elf", "dep:bzip2", "dep:flate2", "dep:xz2", "dep:zstd"]
regex = ["dep:regex"]
