[package]
name = "btf-rs"
version = "1.1.0"
license = "LGPL-2.1-or-later"
description = "Library for the BPF type format (BTF)."
repository = "https://github.com/retis-org/btf-rs"
homepage = "https://github.com/retis-org/btf-rs"
readme = "README.md"
keywords = ["bpf", "btf", "ebpf"]
# Do not publish the tests and their data to save some space. Cargo files and
# readme are always included.
include = ["src/", "LICENSE"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
byteorder = "1.5"

[dev-dependencies]
test-case = "3.2"

[features]
test_runtime = []
