[package]
name = "btf-rs"
description = "Library for the BPF type format (BTF)."
readme = "README.md"
keywords = ["bpf", "btf", "ebpf"]
# Do not publish the tests and their data to save some space. Cargo files and
# readme are always included.
include = ["examples/", "src/", "LICENSE"]
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
btf-rs-derive = { path = "../btf-rs-derive", version = "1.1" }
byteorder = "1.5"
bzip2 = { version = "0.6", optional = true }
elf = { version = "0.8", optional = true }
flate2 = { version = "1.1", optional = true }
liblzma = { version = "0.4", optional = true }
regex = { version = "1.10", optional = true }
thiserror = "2.0"
zstd = { version = "0.13", optional = true }

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
test-case = "3.2"

[features]
elf = ["dep:elf"]
elf-compression = ["elf", "dep:bzip2", "dep:flate2", "dep:liblzma", "dep:zstd"]
regex = ["dep:regex"]
